# pdf2data

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.py
pdf2data/: __init__.py  docling.py  edit.py  mineru.py  mineru_vlm.py  padle_pipeline.py  pdf2data_pipeline.py  pipeline.py
pdf2data/cli/: edit.py
