[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2data-tools"
version = "0.0.2"
description = "Transforms PDF files into machine readable JSON files"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    {name = "Daniel Pereira Costa", email = "daniel.pereira.costa@tecnico.ulisboa.pt"},
]
keywords = ["pdf", "data-extraction", "json", "tables", "figures", "document-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = [
    "Click<=8.3.1",
    "PyMuPDF<=1.26.7",
    "pylatexenc<=2.10",
    "pydantic<=2.12.5",
    "beautifulsoup4<=4.14.3",
    "pdf2doi<=1.7",
    "Levenshtein<=0.27.3",
    "trieregex<=1.0.0",
    "bibtexparser<=1.4.3",
    "pypdf>=3.1.0",
]

[project.optional-dependencies]
test = ["pytest>=3"]
pdf2data_pipeline = [
    "torch<=2.10.0",
    "opencv-python<=4.13.0.92",
    "tensorflow<=2.20.0",
    "doclayout_yolo<=0.0.4",
    "pdf2image<=1.17.0",
    "paddleocr<=3.4.0",
    "paddlepaddle<=3.3.0",
]

[project.scripts]
pdf2data_metadata = "pdf2data.cli.metadata_finder:main"
pdf2data_references = "pdf2data.cli.reference_extractor:main"
pdf2data_text = "pdf2data.cli.text_extractor:main"
pdf2data_block = "pdf2data.cli.block_extractor:main"
pdf2data_eval = "pdf2data.cli.evaluator:main"
pdf2data_detect_image = "pdf2data.cli.table_detector:main"
pdf2data = "pdf2data.cli.pdf2data:main"
pdf2data_find_blocks = "pdf2data.cli.block_finder:main"
pdf2data_find_text = "pdf2data.cli.text_finder:main"

[project.urls]
Homepage = "https://github.com/pocoyo7798/pdf2data"
Repository = "https://github.com/pocoyo7798/pdf2data"
Issues = "https://github.com/pocoyo7798/pdf2data/issues"

[tool.setuptools.packages.find]
include = ["pdf2data", "pdf2data.*"]

[tool.pytest.ini_options]
addopts = "--ignore=setup.py"

[tool.bumpversion]
current_version = "0.0.2"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "setup.py"
search = "version='{current_version}'"
replace = "version='{new_version}'"

[[tool.bumpversion.files]]
filename = "pdf2data/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"